--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,14 @@
         android:layout_height="0dp"
         android:layout_weight="1">
     </ListView>
+    <Button
+        android:id="@+id/postButton"
+        android:text="Post Data"
+        android:onClick="postButtonTapped"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_weight="0">
+    </Button>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
