--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,63 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/my_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/beaconCount"
-        android:text="0 visible beacons:"
-        android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"/>
-    <ListView
-        android:id="@+id/beaconList"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-    </ListView>
-    <Button
-        android:id="@+id/postButton"
-        android:text="Post Data"
-        android:onClick="postButtonTapped"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0">
-    </Button>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="0">
+        <TextView
+            android:id="@+id/text_central_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            app:layout_constraintBottom_toBottomOf="@+id/beaconList"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/beaconList"
+            app:layout_constraintTop_toBottomOf="@+id/beaconCount" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".5"/>
+
+        <TextView
+            android:id="@+id/beaconCount"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:text="0 visible beacons:"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ListView
+            android:id="@+id/beaconList"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/beaconCount"
+            app:layout_constraintBottom_toTopOf="@id/postButton">
+
+        </ListView>
+
+        <Button
+            android:id="@+id/postButton"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="0"
+            android:onClick="postButtonTapped"
+            android:text="Post Data"
+            app:layout_constraintBottom_toTopOf="@+id/rangingButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
         <Button
             android:id="@+id/rangingButton"
+            android:layout_height="wrap_content"
+            android:layout_width="0sp"
             android:onClick="rangingButtonTapped"
             android:text="Disable Ranging"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1">
-        </Button>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <Button
             android:id="@+id/monitoringButton"
-            android:text="Disable Monitoring"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
             android:onClick="monitoringButtonTapped"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1">
-        </Button>
-    </LinearLayout>
+            android:text="Disable Monitoring"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline" />
 
-</LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- this the navigation view which draws and shows the navigation drawer -->
+    <!-- include the menu created in the menu folder -->
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/slide_drawer" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
