Squashed commit of the following:
commit 1c1b78b153f3a301486fd90df325f2b886d9803f
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Nov 18 13:32:13 2024 +0000

    Sprint-002, can't tell what I did here

commit 6d9a2de272fadafa65720e9b4f4102282312a8d9
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 14 12:32:24 2024 +0000

    add IES colors

commit 38cef0e4b479a73fc2a470274355a87957fe5b32
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Nov 11 11:14:52 2024 +0000

    UI improvements

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#273EBD</color>
+    <color name="IES_blue_main">#1867b7</color>
+    <color name="IES_blue_dark">#2a6496</color>
+    <color name="IES_yellow_logo">#f0b450</color>
 </resources>
