--- a/app/src/main/res/layout/view_permissions.xml
+++ b/app/src/main/res/layout/view_permissions.xml
@@ -1,33 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/app_bar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:title="@string/app_name" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10sp"
+        android:layout_margin="20sp"
+        android:maxWidth="100sp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBar">
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <TextView
@@ -42,7 +28,10 @@
             android:layout_height="wrap_content"
             android:stretchColumns="1">
 
-            <TableRow android:layout_height="wrap_content">
+            <TableRow
+                android:id="@+id/row_permission_localization"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/text_permission_localization"
@@ -58,6 +47,7 @@
             </TableRow>
 
             <TableRow
+                android:id="@+id/row_permission_localization_background"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -75,6 +65,7 @@
             </TableRow>
 
             <TableRow
+                android:id="@+id/row_permission_notifications"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -92,6 +83,7 @@
             </TableRow>
 
             <TableRow
+                android:id="@+id/row_permission_bluetooth"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -115,7 +107,7 @@
         android:id="@+id/btn_permissions_show_in_settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/ic_settings"
+        android:drawableEnd="@drawable/baseline_settings_24"
         android:drawableTint="@color/white"
         android:text="@string/permissions_show_in_settings"
         android:layout_marginHorizontal="35sp"
