Squashed commit of the following:
commit 6d953d55695bfc6425803cdeb05faab1cad5a3e7
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 17:20:52 2024 +0000

    login view, todo

commit 9e3487e045e47b7d787850f60ba2381cf73b1a2a
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 17:20:37 2024 +0000

    mínima funcionalidad de mostrar beacons

commit 4659a0e58058f7597d4e74e960f42c596c3304bb
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 10:03:55 2024 +0000

    Test code to post to server

commit d6e5372782ef6b3fa6ec792a95ddd0fab2b583f1
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 08:17:20 2024 +0000

    update deps

commit 10ff3cb8615f4d733c91dedd4eaa531680990d4f
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 08:17:12 2024 +0000

    Fix DeprecationWarning

commit a63dddc4b00a6d3f98c6b9c7163778c647fe279b
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 21 08:51:02 2024 +0000

    use singleton of beaconRefApp

commit 6f75a279795736d33cbe7106bdecc70009811311
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 21 08:50:22 2024 +0000

    unnecessary import

commit 8d44ad31299051ffa021bdbeeba8a217d64ad910
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 21 08:50:06 2024 +0000

    rm basic logo

commit cb672e8668e208ca041e31a8278904cf282c9797
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Nov 20 17:24:01 2024 +0000

    Add config for developing on debug

commit 911a3a755043e2a3947c675804aeb9f2427fd5f3
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Nov 20 14:09:52 2024 +0000

    add debug flag via BuildConfig

commit 745505091298d9d3f44eba2e3769bbb1949af760
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed N

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,9 +17,18 @@
         android:contentDescription="@string/logo"
         />
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16sp"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/app_name"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10sp"
         android:id="@+id/version_textview"
         />
     <TextView
@@ -29,6 +39,6 @@
         android:text="@string/credits"
         />
 
-    <!-- Add GitHub / Server main pages -->
+    <!-- TODO(Add GitHub / Server main pages) -->
 
 </LinearLayout>
