--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,9 +5,18 @@
         android:title="@string/settings_app_behaviour"
         android:icon="@drawable/baseline_settings_24">
 
-    <SwitchPreferenceCompat
+    <EditTextPreference
+        android:key="user_token"
+        android:title="@string/settings_user_token"
+        android:inputType="textPassword"
+        android:dialogTitle="@string/settings_user_token"
+        android:dialogMessage="@string/settings_user_token_message" />
+
+    <!-- SwitchPreferenceCompat
         android:key="only_wifi_upload"
-        android:title="@string/settings_only_wifi_upload"/>
+        android:title="@string/settings_only_wifi_upload"
+        android:summaryOn="@string/settings_only_wifi_upload_on"
+        android:summaryOff="@string/settings_only_wifi_upload_off"/ -->
 
     </PreferenceCategory>
 
