--- a/app/src/main/res/layout/activity_permissions.xml
+++ b/app/src/main/res/layout/activity_permissions.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/permissions_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -13,7 +27,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/permissions_toolbar">
 
 
         <TextView
@@ -26,7 +40,7 @@
         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:stretchColumns="1">
+            android:stretchColumns="*">
 
             <TableRow
                 android:id="@+id/row_permission_localization"
@@ -37,13 +51,15 @@
                     android:id="@+id/text_permission_localization"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/permission_localization" />
+                    android:text="@string/permission_localization"
+                    android:layout_gravity="center_vertical"/>
 
-                <com.google.android.material.switchmaterial.SwitchMaterial
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/sw_permission_localization"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:layout_margin="10sp"
+                    android:text="@string/permission_grant" />
             </TableRow>
 
             <TableRow
@@ -55,13 +71,15 @@
                     android:id="@+id/text_permission_localization_background"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/permission_localization_background" />
+                    android:text="@string/permission_localization_background"
+                    android:layout_gravity="center_vertical" />
 
-                <com.google.android.material.switchmaterial.SwitchMaterial
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/sw_permission_localization_background"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:layout_margin="10sp"
+                    android:text="@string/permission_grant" />
             </TableRow>
 
             <TableRow
@@ -73,13 +91,15 @@
                     android:id="@+id/text_permission_notifications"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/permission_notification" />
+                    android:text="@string/permission_notification"
+                    android:layout_gravity="center_vertical"/>
 
-                <com.google.android.material.switchmaterial.SwitchMaterial
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/sw_permission_notifications"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:layout_margin="10sp"
+                    android:text="@string/permission_grant" />
             </TableRow>
 
             <TableRow
@@ -91,13 +111,15 @@
                     android:id="@+id/text_permission_bluetooth"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/permission_bluetooth" />
+                    android:text="@string/permission_bluetooth"
+                    android:layout_gravity="center_vertical"/>
 
-                <com.google.android.material.switchmaterial.SwitchMaterial
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/sw_permission_bluetooth"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:layout_margin="10sp"
+                    android:text="@string/permission_grant" />
             </TableRow>
         </TableLayout>
 
@@ -112,6 +134,7 @@
         android:text="@string/permissions_show_in_settings"
         android:layout_marginHorizontal="35sp"
         android:layout_marginTop="40sp"
+        android:backgroundTint="#898787"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
