--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.beaconble.HomeFragment"
+        android:name="com.example.beaconble.FragHome"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_home">
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.beaconble.SettingsFragment"
+        android:name="com.example.beaconble.FragSettings"
         android:label="Settings" >
         <action
             android:id="@+id/action_settingsFragment_to_homeFragment"
