--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,57 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragHome">
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/uploadButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/baseline_backup_24"
-        android:tint="@color/black"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="24sp"
-        android:contentDescription="@string/settings"
-        />
+    tools:context=".ui.FragHome">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/text_central_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            app:layout_constraintBottom_toBottomOf="@+id/beaconListView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/beaconListView"
-            app:layout_constraintTop_toBottomOf="@+id/beaconCountTextView" />
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/beaconCountTextView"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="20sp"
             android:text=""
             android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ListView
-            android:id="@+id/beaconListView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/beaconCountTextView"/>
+            android:layout_height="0sp"
+            app:layout_constraintVertical_weight="1"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/beaconCountTextView">
+
+            <ListView
+                android:id="@+id/beaconListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/beaconCountTextView" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottomAppBar"
+        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
 
-</RelativeLayout>
+        <ImageButton
+            android:id="@+id/imageButtonActionEmptyAll"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:layout_marginHorizontal="20sp"
+            android:background="@null"
+            android:contentDescription="@string/delete_all"
+            android:padding="14sp"
+            android:scaleType="centerInside"
+            android:src="@drawable/round_delete_forever_24"
+            app:tint="?attr/colorOnPrimary"/>
+
+        <ImageButton
+            android:id="@+id/imageButtonActionExportAll"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:layout_marginHorizontal="20sp"
+            android:background="@null"
+            android:contentDescription="@string/upload"
+            android:padding="14sp"
+            android:scaleType="centerInside"
+            android:src="@drawable/save_as_24"
+            app:tint="?attr/colorOnPrimary"/>
+
+    </com.google.android.material.bottomappbar.BottomAppBar>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/startStopSessionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/start_button"
+        android:tint="@color/design_default_color_on_secondary"
+        app:layout_anchor="@id/bottomAppBar"
+        app:srcCompat="@drawable/triangle_start" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
