--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.beaconble.FragHome"
+        android:name="com.example.beaconble.ui.FragHome"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_home">
         <action
@@ -16,21 +16,33 @@
         <action
             android:id="@+id/action_homeFragment_to_aboutFragment"
             app:destination="@id/aboutFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_fragBeaconDetails"
+            app:destination="@id/fragBeaconDetails" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.beaconble.FragSettings"
-        android:label="Settings" >
+        android:name="com.example.beaconble.ui.FragSettings"
+        android:label="@string/settings" >
         <action
             android:id="@+id/action_settingsFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/aboutFragment"
-        android:name="com.example.beaconble.AboutFragment"
-        android:label="About" >
+        android:name="com.example.beaconble.ui.AboutFragment"
+        android:label="@string/about" >
         <action
             android:id="@+id/action_aboutFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragBeaconDetails"
+        android:name="com.example.beaconble.ui.FragBeaconDetails"
+        android:label="@string/beacon_details"
+        tools:layout="@layout/fragment_beacon_details" >
+        <action
+            android:id="@+id/action_fragBeaconDetails_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
 </navigation>
