Squashed commit of the following:
commit b874ad351b276cfe3b6df39699f65dde5c0b3b13
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 13 12:03:11 2024 +0000

    validation of register and login fields, formatting

commit 29aa9bc32c409cc61e9b7697d821d5560108ac6b
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 13 10:08:37 2024 +0000

    update app name

commit d1f7cf278e1711e438ccc40f1f781fe8aef30432
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 13 10:08:31 2024 +0000

    format and cleanup code

commit 068d29aac31edde15e6807e72f013f7abeb60652
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 13 10:08:13 2024 +0000

    update notifications strings

commit 266165f7c75d42e6f68f4a19946eb44bac567149
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 12 20:19:38 2024 +0000

    fcking fix all

commit 3e6ff1bf5ebc4972c00617369dd288b38cc3adb9
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 12 15:55:48 2024 +0000

    fix file creator to comply with server

commit bb161598fe63f25e9a7009c979e27ecc99c3fcd5
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 12 12:55:33 2024 +0000

    add upload method

commit d4185942aa7959ca8e60ecc108a289bdc305f079
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 12 12:55:16 2024 +0000

    session writer -> subclass a version writer // add unit test

commit 3c81aa236f5aebcc4f0a1a67802596e91ab2f19b
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Dec 11 22:54:17 2024 +0000

    add "ongoing meas session" notification

commit 2752364d34e1fab74eda03d3113ec4e53563f1b0
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Dec 11 22:54:00 2024 +0000

    fix user account persistence

commit 2a2b4f1547d1852b3e571f62b1fab4e98ae9a5cf
Autho

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.FragLogin">
+    tools:context=".ui.FragRegister">
 
     <ProgressBar
         android:id="@+id/pbLogin"
@@ -18,27 +18,39 @@
 
 
     <EditText
+        android:id="@+id/etUsername"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="36dp"
+        android:autofillHints="username"
+        android:hint="@string/prompt_username"
+        android:inputType="textEmailAddress"
+        android:selectAllOnFocus="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pbLogin" />
+
+    <EditText
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="24dp"
-        android:autofillHints="emailAddress"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="12dp"
+        android:autofillHints="@string/prompt_email"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/pbLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/etUsername" />
 
     <EditText
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="12dp"
         android:autofillHints="password"
         android:hint="@string/prompt_password"
         android:imeActionLabel="@string/action_sign_in_short"
@@ -49,8 +61,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEmail" />
 
+    <EditText
+        android:id="@+id/etPassword2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="12dp"
+        android:autofillHints="password"
+        android:hint="@string/prompt_password_again"
+        android:imeActionLabel="@string/action_sign_in_short"
+        android:imeOptions="actionDone"
+        android:inputType="textPassword"
+        android:selectAllOnFocus="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etPassword" />
+
     <TextView
-        android:id="@+id/tvLoginMessages"
+        android:id="@+id/tvRegisterMessages"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
@@ -58,46 +86,18 @@
         android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/etPassword2" />
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50sp"
         android:layout_gravity="start"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="64dp"
         android:enabled="false"
-        android:text="@string/login"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvLoginMessages"
-        app:layout_constraintVertical_bias="0.1" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:text="@string/login_no_account_question"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
-        app:flow_verticalBias="0.5"/>
-
-
-    <Button
-        android:id="@+id/btnGoToRegister"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:backgroundTint="#898787"
-        android:text="@string/register_here"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/tvRegisterMessages" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
