--- a/app/src/main/res/menu/slide_drawer.xml
+++ b/app/src/main/res/menu/slide_drawer.xml
@@ -11,6 +11,11 @@
         android:icon="@drawable/baseline_arrow_back_24"/>
 
     <item
+        android:id="@+id/nav_login"
+        android:title="@string/login"
+        android:icon="@drawable/baseline_arrow_forward_24"/>
+
+    <item
         android:id="@+id/nav_about"
         android:title="@string/about"
         android:icon="@drawable/baseline_info_24"/>
