Squashed commit of the following:
commit 1917c39b91eedf3c73e33d4ed273c27eed58ccc2
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Dec 23 21:01:24 2024 +0100

    Hell yeah app is ready to go

commit 2125ea7a0f9c2188120502e8e83be6841dab37f7
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Dec 23 21:00:56 2024 +0100

    cleanup, satisfy linter

commit 663d8d6300e8333615a39673ef8dd6d71c5dbeaf
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Sun Dec 22 19:33:48 2024 +0100

    notifications texts

commit 6c99e7df29cc83537ca531722efce56317753c93
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 20 14:03:18 2024 +0100

    upload of files, changed format

commit a9563d49b4e0596c270cadd1b0142179689cf9ee
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 20 11:11:14 2024 +0100

    tooltip start / stop button

commit f13ea39b665ebb1f461a3c714f3e6d93aa73cf7c
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 20 11:01:25 2024 +0100

    add tooltips to image buttons in home

commit c652f780fce40814285462991fa66a944bcebbfb
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 20 10:50:46 2024 +0100

    reduce mem consumption

commit 717d4253a302d4fffea5551e0576cc4f0577357e
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 20 10:50:28 2024 +0100

    direct share of files via ACTION_SEND, most work of LoggingSession

commit 7e0037a37d35cec5be2fe62030ec4132463a4f9c
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 19 21:10:51 2024 +0100

    Clean FragHomeViewModel.kt

commit 10648d0071685b91ed2868bb1b732edc6381f97d
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 19 21:06:49 2024 +0100

    merge abstraction of session

commit 1fcc2f208c9d0e1dbe86f9fb6c1b8ad1b09068a2
Author: ech

--- a/app/src/main/res/layout/activity_permissions.xml
+++ b/app/src/main/res/layout/activity_permissions.xml
@@ -129,7 +129,7 @@
         android:id="@+id/btn_permissions_show_in_settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/baseline_settings_24"
+        android:drawableEnd="@drawable/settings_gear"
         android:drawableTint="@color/white"
         android:text="@string/permissions_show_in_settings"
         android:layout_marginHorizontal="35sp"
