--- a/app/src/main/res/layout/fragment_beacon_details.xml
+++ b/app/src/main/res/layout/fragment_beacon_details.xml
@@ -25,14 +25,14 @@
             android:layout_alignParentStart="true" />
 
         <ImageButton
-            android:id="@+id/imageButtonDeleteBeacon"
+            android:id="@+id/imBtnDeleteBeacon"
             android:layout_width="wrap_content"
             android:layout_height="30sp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="@null"
             android:contentDescription="@string/delete"
-            android:src="@drawable/round_delete_forever_24" />
+            android:src="@drawable/delete_forever_bin" />
 
     </RelativeLayout>
 
