--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,29 +46,45 @@
         android:layout_gravity="bottom">
 
         <ImageButton
-            android:id="@+id/imageButtonActionEmptyAll"
+            android:id="@+id/imBtnActionEmptyAll"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:layout_marginHorizontal="20sp"
             android:background="@null"
             android:contentDescription="@string/delete_all"
+            android:tooltipText="@string/delete_all"
             android:padding="14sp"
             android:scaleType="centerInside"
-            android:src="@drawable/round_delete_forever_24"
+            android:src="@drawable/delete_forever_bin"
             app:tint="?attr/colorOnPrimary"/>
 
         <ImageButton
-            android:id="@+id/imageButtonActionExportAll"
+            android:id="@+id/imBtnActionUploadSession"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            android:layout_marginHorizontal="20sp"
+            android:layout_marginHorizontal="16sp"
             android:background="@null"
             android:contentDescription="@string/upload"
+            android:tooltipText="@string/upload"
             android:padding="14sp"
             android:scaleType="centerInside"
-            android:src="@drawable/save_as_24"
+            android:src="@drawable/upload_cloud"
+            app:tint="?attr/colorOnPrimary"/>
+
+        <ImageButton
+            android:id="@+id/imBtnActionShareSession"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:layout_marginHorizontal="0sp"
+            android:background="@null"
+            android:contentDescription="@string/share"
+            android:tooltipText="@string/share"
+            android:padding="14sp"
+            android:scaleType="centerInside"
+            android:src="@drawable/share"
             app:tint="?attr/colorOnPrimary"/>
 
     </com.google.android.material.bottomappbar.BottomAppBar>
@@ -78,6 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/start_button"
+        android:tooltipText="@string/start_button"
         android:tint="@color/design_default_color_on_secondary"
         app:layout_anchor="@id/bottomAppBar"
         app:srcCompat="@drawable/triangle_start" />
