--- a/app/src/main/res/layout/view_welcome.xml
+++ b/app/src/main/res/layout/view_welcome.xml
@@ -27,7 +27,7 @@
         android:gravity="center"
         android:text="@string/welcome_continue"
         android:textColorHint="@color/blue"
-        android:drawableEnd="@drawable/baseline_arrow_forward_24"
+        android:drawableEnd="@drawable/arrow_forward"
         android:drawableTint="@color/white"
         android:layout_marginTop="20sp"
         app:layout_constraintEnd_toEndOf="parent"
