--- a/app/src/main/res/menu/slide_drawer.xml
+++ b/app/src/main/res/menu/slide_drawer.xml
@@ -3,25 +3,25 @@
     <item
         android:id="@+id/nav_settings"
         android:title="@string/settings"
-        android:icon="@drawable/baseline_settings_24"/>
+        android:icon="@drawable/settings_gear"/>
 
     <item
         android:id="@+id/nav_logout"
         android:title="@string/logout"
-        android:icon="@drawable/baseline_arrow_back_24"/>
+        android:icon="@drawable/arrow_back"/>
 
     <item
         android:id="@+id/nav_login"
         android:title="@string/login"
-        android:icon="@drawable/baseline_arrow_forward_24"/>
+        android:icon="@drawable/arrow_forward"/>
 
     <item
         android:id="@+id/nav_about"
         android:title="@string/about"
-        android:icon="@drawable/baseline_info_24"/>
+        android:icon="@drawable/info"/>
 
     <item
         android:id="@+id/nav_help"
         android:title="@string/help"
-        android:icon="@drawable/baseline_help_24"/>
+        android:icon="@drawable/help_question_mark"/>
 </menu>
