--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,8 +52,8 @@
             android:layout_gravity="start"
             android:layout_marginHorizontal="20sp"
             android:background="@null"
-            android:contentDescription="@string/delete_all"
-            android:tooltipText="@string/delete_all"
+            android:contentDescription="@string/current_session_empty"
+            android:tooltipText="@string/current_session_empty"
             android:padding="14sp"
             android:scaleType="centerInside"
             android:src="@drawable/delete_forever_bin"
@@ -66,8 +66,8 @@
             android:layout_gravity="end"
             android:layout_marginHorizontal="16sp"
             android:background="@null"
-            android:contentDescription="@string/upload"
-            android:tooltipText="@string/upload"
+            android:contentDescription="@string/all_sessions_upload"
+            android:tooltipText="@string/all_sessions_upload"
             android:padding="14sp"
             android:scaleType="centerInside"
             android:src="@drawable/upload_cloud"
@@ -80,8 +80,8 @@
             android:layout_gravity="start"
             android:layout_marginHorizontal="0sp"
             android:background="@null"
-            android:contentDescription="@string/share"
-            android:tooltipText="@string/share"
+            android:contentDescription="@string/current_session_share"
+            android:tooltipText="@string/current_session_share"
             android:padding="14sp"
             android:scaleType="centerInside"
             android:src="@drawable/share"
